proper-webpage-creation

--- a/about.html
+++ b/about.html
@@ -4,15 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    At Custom Ink, we’re about more than shirts. We’re about you and everything you<br>
+    <header>
+        <button type="button">
+            <a href="index.html">Home Page</a>
+        </button>
+    </header>
+    <p>At Custom Ink, we're about more than shirts. We're about you and everything you<br>
     love. The passion you share with your group, club, or team; the excitement<br>
      you have for your event or cause; and the drive that makes your business <br>
      stand out from the rest. We believe that custom t-shirts do more than just <br>
      make you look good - they help you feel good and inspire you to do good as well<br>
-     . We’re passionate about custom gear, but what we love even more is<br>
-     helping you bring what you love to life. So let’s create something together.<br>
+     . We're passionate about custom gear, but what we love even more is<br>
+     helping you bring what you love to life. So let's create something together.<br>
+     </p>
+     <div>
+       <h1 id="run">All Tshirt is available</h1>
+     </div>
+     <hr>
+     <footer>
+        <a href="https://www.myntra.com/link-tshirt-tshirts">T-Shirt</a>
+     </footer>
 </body>
 </html>
