--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Webpage Design</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <header><p>T-Shirt</p>
-            <img src ="assets/img/facebook1logo.jpg" width="50" height="40"></a>
-            <img src ="assets/img/instagram1logo.jpg" width="50" height="40"></a>
+            <img src ="assets/img/facebook1logo.jpg" width="50" height="40">
+            <img src ="assets/img/instagram1logo.jpg" width="50" height="40">
             <div class="nav">
                 <ul>
-                    <li><a href="about.html">About us</a></li>
+                    <li>
+                        <a href="about.html">About us</a>
+                    </li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -25,6 +27,7 @@
         T-Shirt Design</p>
      <p style="text-align: center;"><button type="button">Get Started</button></p>
     </p>
+    <iframe src="http://www.crunkthread.com" width="750" height="250"></iframe>
     <div>
     <table border="1" align="center">
         <th>our features</th>
@@ -35,11 +38,15 @@
         </tr>
     </table>
     </div>
+    <main>
     <section>
         <article>
             <figure>
             <img src ="assets/img/T Shirt.jpg" width="200" height="100";>
             <figcaption>Unique T-Shirt</figcaption>
+            <img src ="assets/img/Fullsleevetshirt.jpg" id="sleeve" width="150" height="100">
+            <img src="assets/img/Full hand white sleeve.jpg" id="sleeve" width="150" height="100">
+            <img src="assets/img/blackTshirt.jpg" id="sleeve"width="150" height="100">
             </figure>
             <p >
                 At Custom Ink, we’re about more than shirts. We’re about you and everything you<br>
@@ -47,11 +54,23 @@
                 youhave for your event or cause; and the drive that makes your business <br>
                 stand out from the rest. We believe that custom t-shirts do more than just <br>
                 make you look good - they help you feel good and inspire you to do good as well<br>
-                . We’re passionate about custom gear, but what we love even more is<br>
+                 . We’re passionate about custom gear, but what we love even more is<br>
                 hselling you bring what you love to life. So let’s create something together.<br>
             </p>
         </article>
+    </main>
     </section><br><br>
+    <div>
+        <aside>
+            <ol>
+                <li>Full Hand</li>
+                <li>Half Hand</li>
+                <li>Round neck</li>
+                <li>Jean T-shirt</li>
+                <li>Popcorn T-shirt</li>
+            </ol>
+        </aside>
+    </div>
     <hr>
     <footer>
         About us :The first online custom shirt brand in India, our aim is to reinforce that world class quality and product can originate in Mumbai. We are on a mission to ...
