--- a/services.html
+++ b/services.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Services</title>
 </head>
 <body>
+    <header>
+        <button type="button">
+            <a href="index.html">Home Page</a>
+        </button>
+    </header>
     <ul>
         <li> InkMonk. Inkmonk is a full-stack merchandising platform, 
     where our customers can obtain all t-shirt printing and customization 
@@ -19,5 +24,23 @@
         <li>Ginger Crush. ...</li>
         <li>Tee Labs.</li>
     </ul>
+    <hr>
+    <footer>
+        <a href="https://www.myntra.com/link-tshirt-tshirts"><button type="button">Service Link</button></a>
+        <ul>
+            <li>item1
+                <ul>
+                    <li>item1.1</li>
+                    <li>item1.2</li>
+                    <li>item1.3</li>
+                </ul>
+            </li>
+            <li>item2
+                <ul>
+                    <li>item2.1</li>
+                    <li>item2.2</li>
+                    <li>item2.3</li>
+                </ul>
+    </footer>
 </body>
 </html>
