--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>contact</title>
 </head>
 <body>
+    <header>
+        <button type="button">
+            <a href="index.html">Home Page</a>
+        </button>
+    </header>
     <h1 style="text-align: center;">FOR CONTACT</h1>
     <h2 style="text-align: center;">9087654321</h2>
+    <hr>
+<footer>
+    For further enquiry:<br>
+    <a href="https://mail.google.com/mail/">Tshirt001@gmail.com</a>
+</footer>
 </body>
 </html>
