--- a/about.html
+++ b/about.html
@@ -9,10 +9,9 @@
 </head>
 <body>
     <header>
-        <button type="button">
-            <a href="index.html">Home Page</a>
-        </button>
-    </header>
+         <a href="index.html">Home Page</a>
+         <h2>About US</h2>
+        </header>
     <p>At Custom Ink, we're about more than shirts. We're about you and everything you<br>
     love. The passion you share with your group, club, or team; the excitement<br>
      you have for your event or cause; and the drive that makes your business <br>
@@ -24,9 +23,93 @@
      <div>
        <h1 id="run">All Tshirt is available</h1>
      </div>
+     <details>
+        <summary>Read more...</summary>
+        <img src="assets/img/Readmore Tshirt.jpg" height="100" width="200">
+        <p>
+            Lorem Ipsum is simply dummy text of the printing 
+            and typesetting industry. Lorem Ipsum has been the
+            industry's standard dummy text ever since the 1500s,
+            when an unknown printer took a galley of type and 
+            scrambled it to make a type specimen book. It has
+            survived not only five centuries, but also the leap
+            into electronic typesetting, remaining essentially
+            unchanged. It was popularised in the 1960s with the 
+            release of Letraset sheets containing Lorem Ipsum passages,
+            and more recently with desktop publishing software like Aldus PageMaker 
+            including versions of Lorem Ipsum.
+        </p>
+     </details>
      <hr>
      <footer>
-        <a href="https://www.myntra.com/link-tshirt-tshirts">T-Shirt</a>
-     </footer>
+        <div>
+            <table>
+                <th>Jot Form</th>
+                <tr>
+                    <td>signup</td>
+                    <td>create a form</td>
+                    <td>My Forms</td>
+                    <td>pricing</td>
+                    <td>JotForm Enterprices</td>
+                    <td>Features</td>
+                </tr>
+                <th>Market place</th>
+                <tr>
+                    <td>Form Templates</td>
+                    <td>PDF Templates</td>
+                    <td>Form Themes</td>
+                    <td>Form Widgets</td>
+                    <td>Intergrations & Apps</td>
+                </tr>
+                <th>Support</th>
+                <tr>
+                    <td>
+                        <a href="contact.html">Contact us</a>
+                    </td>
+                    <td>User Guide</td>
+                    <td>Help</td>
+                    <td>Examples</td>
+                    <td>Webinars</td>
+                </tr>
+                <th>company</th>
+                <tr>
+                    <td>
+                        <a href="about.html">About us</a>
+                    </td>
+                    <td>Media Kit</td>
+                    <td>In the News</td>
+                    <td>Newsletters</td>
+                    <td>Partnerships</td>
+                    <td>Blog</td>
+                </tr>    
+            </table>
+        </div>
+        <div>
+            <img src="assets/img/playstore.png" height="60" width="100">
+        </div>
+        <hr>
+        <div>
+            <ul>
+                <li>Terms and condition</li>
+                <li>Privacy policy</li>
+                <li>Security</li>
+            </ul>
+            <figure>
+            <img src="assets/img/location.jpg" height="40" width="60">
+            <figcaption>111 pine st.suite 1815, San Francisco,CA94111</figcaption>
+            </figure>
+        </div>
+        <div>
+            <a href=https://www.facebook.com/login>
+            <img src="assets/img/facebook1logo.jpg" height="40" width="60">
+            </a>
+            <a href="https://www.instagram.com/accounts/login/">
+            <img src="assets/img/instagram1logo.jpg" height="40" width="60">
+            </a>
+            <a href="https://twitter.com/login?lang=en">
+            <img src="assets/img/twitter.png" height="40" width="60">
+            </a>
+        </div>
+    </footer>
 </body>
 </html>
