--- a/contact.html
+++ b/contact.html
@@ -8,16 +8,91 @@
 </head>
 <body>
     <header>
-        <button type="button">
-            <a href="index.html">Home Page</a>
-        </button>
+        <p>
+            
+        </p>
+        <a href="index.html">Home Page</a>
     </header>
-    <h1 style="text-align: center;">FOR CONTACT</h1>
-    <h2 style="text-align: center;">9087654321</h2>
     <hr>
+    <main>
+        <div>
+            <img src="assets/img/contactimg.jpg" height="400" width="650">
+        </div>
+        <form>
+            <label> Name :</label> <input type="Text"><br>
+            <label> Email:</label> <input type="email"><br>
+            <button type="button">Submit</button>
+        </form>
+    </main>
 <footer>
-    For further enquiry:<br>
-    <a href="https://mail.google.com/mail/">Tshirt001@gmail.com</a>
+    <div>
+        <table>
+            <th>Jot Form</th>
+            <tr>
+                <td>signup</td>
+                <td>create a form</td>
+                <td>My Forms</td>
+                <td>pricing</td>
+                <td>JotForm Enterprices</td>
+                <td>Features</td>
+            </tr>
+            <th>Market place</th>
+            <tr>
+                <td>Form Templates</td>
+                <td>PDF Templates</td>
+                <td>Form Themes</td>
+                <td>Form Widgets</td>
+                <td>Intergrations & Apps</td>
+            </tr>
+            <th>Support</th>
+            <tr>
+                <td>
+                    <a href="contact.html">Contact us</a>
+                </td>
+                <td>User Guide</td>
+                <td>Help</td>
+                <td>Examples</td>
+                <td>Webinars</td>
+            </tr>
+            <th>company</th>
+            <tr>
+                <td>
+                    <a href="about.html">About us</a>
+                </td>
+                <td>Media Kit</td>
+                <td>In the News</td>
+                <td>Newsletters</td>
+                <td>Partnerships</td>
+                <td>Blog</td>
+            </tr>    
+        </table>
+    </div>
+    <div>
+        <img src="assets/img/playstore.png" height="60" width="100">
+    </div>
+    <hr>
+    <div>
+        <ul>
+            <li>Terms and condition</li>
+            <li>Privacy policy</li>
+            <li>Security</li>
+        </ul>
+        <figure>
+        <img src="assets/img/location.jpg" height="40" width="60">
+        <figcaption>111 pine st.suite 1815, San Francisco,CA94111</figcaption>
+        </figure>
+    </div>
+    <div>
+        <a href=https://www.facebook.com/login>
+        <img src="assets/img/facebook1logo.jpg" height="40" width="60">
+        </a>
+        <a href="https://www.instagram.com/accounts/login/">
+        <img src="assets/img/instagram1logo.jpg" height="40" width="60">
+        </a>
+        <a href="https://twitter.com/login?lang=en">
+        <img src="assets/img/twitter.png" height="40" width="60">
+        </a>
+    </div>
 </footer>
 </body>
 </html>
