--- a/index.html
+++ b/index.html
@@ -8,19 +8,27 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <header><p>T-Shirt</p>
-            <img src ="assets/img/facebook1logo.jpg" width="50" height="40">
-            <img src ="assets/img/instagram1logo.jpg" width="50" height="40">
+    <header>
             <div class="nav">
                 <ul>
                     <li>
                         <a href="about.html">About us</a>
                     </li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li>
+                        <a href="services.html">Services</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
                 </ul>
             </div>
+            <img src="assets/img/Tshirt logo.jpg" height="80" width="70">
+            <a href="https://www.myntra.com/login">
+            <img src="assets/img/shopping cart logo.jpg"height="80" width="70">
+        </a>
+        <h2>Built for the Style</h2>
     </header>
+    <div>
     <p style="background-color: greenyellow; text-align: center;">
       <p  style="text-align: center;"><strong> Create your</strong></p>
     <p style="font-size: larger; text-align: center;">
@@ -28,6 +36,7 @@
      <p style="text-align: center;"><button type="button">Get Started</button></p>
     </p>
     <iframe src="http://www.crunkthread.com" width="750" height="250"></iframe>
+    </div>
     <div>
     <table border="1" align="center">
         <th>our features</th>
@@ -73,8 +82,74 @@
     </div>
     <hr>
     <footer>
-        About us :The first online custom shirt brand in India, our aim is to reinforce that world class quality and product can originate in Mumbai. We are on a mission to ...
-        You visited this page on 9/3/23.        
+        <div>
+            <table>
+                <th>Jot Form</th>
+                <tr>
+                    <td>signup</td>
+                    <td>create a form</td>
+                    <td>My Forms</td>
+                    <td>pricing</td>
+                    <td>JotForm Enterprices</td>
+                    <td>Features</td>
+                </tr>
+                <th>Market place</th>
+                <tr>
+                    <td>Form Templates</td>
+                    <td>PDF Templates</td>
+                    <td>Form Themes</td>
+                    <td>Form Widgets</td>
+                    <td>Intergrations & Apps</td>
+                </tr>
+                <th>Support</th>
+                <tr>
+                    <td>
+                        <a href="contact.html">Contact us</a>
+                    </td>
+                    <td>User Guide</td>
+                    <td>Help</td>
+                    <td>Examples</td>
+                    <td>Webinars</td>
+                </tr>
+                <th>company</th>
+                <tr>
+                    <td>
+                        <a href="about.html">About us</a>
+                    </td>
+                    <td>Media Kit</td>
+                    <td>In the News</td>
+                    <td>Newsletters</td>
+                    <td>Partnerships</td>
+                    <td>Blog</td>
+                </tr>    
+            </table>
+        </div>
+        <div>
+            <img src="assets/img/playstore.png" height="60" width="100">
+        </div>
+        <hr>
+        <div>
+            <ul>
+                <li>Terms and condition</li>
+                <li>Privacy policy</li>
+                <li>Security</li>
+            </ul>
+            <figure>
+            <img src="assets/img/location.jpg" height="40" width="60">
+            <figcaption>111 pine st.suite 1815, San Francisco,CA94111</figcaption>
+            </figure>
+        </div>
+        <div>
+            <a href=https://www.facebook.com/login>
+            <img src="assets/img/facebook1logo.jpg" height="40" width="60">
+            </a>
+            <a href="https://www.instagram.com/accounts/login/">
+            <img src="assets/img/instagram1logo.jpg" height="40" width="60">
+            </a>
+            <a href="https://twitter.com/login?lang=en">
+            <img src="assets/img/twitter.png" height="40" width="60">
+            </a>
+        </div>
     </footer>
 </body>
 </html>
